--- a/_notebooks/2022-01-08-eigen.ipynb
+++ b/_notebooks/2022-01-08-eigen.ipynb
@@ -1073,7 +1073,9 @@
    "cell_type": "markdown",
    "id": "0c8643c7-36f6-4239-b0bd-ed5ed2d3a3a4",
    "metadata": {},
-   "source": []
+   "source": [
+    "***Problem Set 6.2 ***"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1089,73 +1091,301 @@
   },
   {
    "cell_type": "markdown",
+   "id": "344b4518-a7be-45f3-9543-d2b34d563e9c",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f3b06706-4ae2-485e-bdb6-944118db5b58",
    "metadata": {},
-   "source": []
+   "source": [
+    "### 6.3 Applications to Differential Equations "
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "8009bfe2-bfc3-4a8b-841f-451f58f60949",
    "metadata": {},
-   "source": []
+   "source": [
+    "**The whole point of the section is this: To convert constant-coefficient differential equations into linear algebra.**"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "33a08258-74b1-4073-b879-e1d4def80fb8",
    "metadata": {},
-   "source": []
+   "source": [
+    "*One equation* $\\frac{du}{dt}=\\lambda u$ has the solutions $u(t) = Ce^{\\lambda t}$.\n",
+    "- Linear algebra moves to n by n. The unknown is  a vector u (now boldface).\n",
+    "- 우리는 n exponentials $e^{\\lambda t}x$ in $u(t)$를 expect하지.\n",
+    "\n",
+    "*n equations* $\\frac{du}{dt}=Au$ starting from the vector $u(0)$ at t=0\n",
+    "- These differential equations are linear. If u(t) and vet) are solutions, so is $C u(t) + Dv(t)$.\n",
+    "- 우리가 가장 먼저 할 일: \"pure exponential solutions\" $Ax=\\lambda x$를 사용하여 $u=e^{\\lambda t}x$ 를찾는 것\n",
+    "- Notice that A is a constant matrix. \n",
+    "- $\\frac{du}{dt} = Au$ is \"linear with constant coefficients\""
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "b93d077e-6adc-4870-8cea-6817a2f86ba3",
    "metadata": {},
-   "source": []
+   "source": [
+    "> The main point will be: Solve linear constant coefficient equations by exponentials $e^{\\lambda t}x$, when $Ax = \\lambda X$. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d67c11be-fdda-4a12-a0f8-75ac84f73779",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "30abe539-f66c-4351-8103-fdf5f8fe192c",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Solution of du/dt = Au "
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "260f287b-4d1a-48f2-ad92-75c787cec543",
    "metadata": {},
-   "source": []
+   "source": [
+    "**Use $u=e^{\\lambda t}x$ when $Ax=\\lambda x$ $\\frac{du}{dt}=\\lambda e^{\\lambda t}x$ agrees with $Au=Ae^{\\lambda t}x$**\n",
+    "- All components of this special solution $u = e^{\\lambda t}x$ share the same $e^{\\lambda t}$. The solution grows when $\\lambda > O$. It decays when $\\lambda < O$. If $\\lambda$ is a complex number, its real part decides growth or decay. The imaginary part $w$ gives oscillation ei wt like a sine wave."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd5a1664-bd60-458a-9456-6621feffa0ba",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "04e7516f-cfb0-4c12-a451-6d38d5f473f8",
    "metadata": {},
-   "source": []
+   "source": [
+    "##### ex1)"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "b96830b3-06b4-46d3-a355-77299246ccf0",
    "metadata": {},
-   "source": []
+   "source": [
+    "Solve $\\frac{du}{dt}=Au=\\begin{bmatrix}{0}&{1}\\\\{1}&{0}\\end{bmatrix}u$ starting from $u(0)=\\begin{bmatrix}{4}\\\\{2}\\end{bmatrix}$\n",
+    "- u에 대한 벡터방정식\n",
+    "- y,z라는 스칼라를 포함"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "82c861e9-863d-4f1d-b881-2cf8e7faaf1d",
    "metadata": {},
-   "source": []
+   "source": [
+    "$\\frac{du}{dt}=Au$, $frac{d}{dt}\\begin{bmatrix}{y}\\\\{z}\\end{bmatrix} = \\begin{bmatrix}{1}&{1}\\\\{1}&{0}\\end{bmatrix} \\begin{bmatrix}{y}\\\\{z}\\end{bmatrix}$ means that $\\frac{dy}{dt}=z$ and $\\frac{dz}{dt}=y$\n",
+    "- This matrix A has eigenvalues 1 and -1. The eigenvectors are (1, 1) and (1, -1). \n",
+    "- $u_1(t)=e^{\\lambda_1 t}x_1=e^t \\begin{bmatrix} {1}\\\\{1}\\end{bmatrix}$ and $u_2(t)=e^{\\lambda_2 t}x_2=e^{-t} \\begin{bmatrix} {1}\\\\{-1}\\end{bmatrix}$"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "d148a47c-fade-472d-b3db-d28c7455c2b0",
    "metadata": {},
-   "source": []
+   "source": [
+    "> note: 위의 u는 고유벡터임!, $e^t,e^{-t}$들은 시간에 따라 변함!"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "57de8479-d4b5-4225-bf5b-b0b86de5fca6",
    "metadata": {},
-   "source": []
+   "source": [
+    "To find all other solutions, multiply those special solutions by any C and D and add:\n",
+    "- Complete solution\n",
+    "    - $u(t) = Ce^t\\begin{bmatrix}{1}\\\\{1}\\end{bmatrix}+De^{-t}\\begin{bmatrix}{1}\\\\{-1}\\end{bmatrix} = \\begin{bmatrix}{4}\\\\{2}\\end{bmatrix}$ yields $C=3$ and $D=1$"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "1fadb97f-c482-420b-a329-59c1219f5d47",
+   "metadata": {},
+   "source": [
+    "The same three steps that solved Uk+l = AUk now solve $\\frac{du}{dt} = Au:$ \n",
+    "1. Write $u (0)$ as a combination $c_1 x_1 + ... + c_n x_n$ of the eigenvectors of $A$. \n",
+    "2. Multiply each eigenvector $x_i$ by $e^{\\lambda_i t}$ . \n",
+    "3. The solution is the combination of pure solutions $e^{\\lambda t}x$: \n",
+    "    - $u(t)=c_1e^{\\lambda_1 t}x_1+\\dots+c_ne^{\\lambda_n t}x_n$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bea3a096-3c5b-4684-b9b5-a84e765d8ffb",
+   "metadata": {},
+   "source": [
+    "> warning: Not included: If two $\\lambda$'S are equal, with only one eigenvector, another solution is needed. (It will be $te^{\\lambda t} x$). Step 1 needs $A = S\\Lambda S^{-1}$ to be diagonalizable: a basis of eigenvectors."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8be11a78-e2a7-42a6-9bf0-1f800e45b0d0",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43b6859f-628d-4041-9e54-e31552d6ff5a",
+   "metadata": {},
+   "source": [
+    "##### ex2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28abba83-4004-4bd9-88e2-95e809be907c",
+   "metadata": {},
+   "source": [
+    "Solve $\\frac{du}{dt}=Au$ knowing tjhe eigenvalues $\\lambda=1,2,3$ of A"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6190037e-23af-4f15-9fba-faf277b3879b",
+   "metadata": {},
+   "source": [
+    "$$\\frac{du}{dt}=\\begin{bmatrix}{1}&{1}&{1}\\\\{0}&{2}&{2}\\\\{0}&{0}&{3} \\end{bmatrix}u \\text{ starting from } u(0)=\\begin{bmatrix}{9}\\\\{7}\\\\{4} \\end{bmatrix}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dac647c3-ecd3-44dd-abab-1cd0e169cdc0",
+   "metadata": {},
+   "source": [
+    "The eigenvectors are $x_1 = (1,0,0)$ and $x_2 = (1,1,0)$ and $x_3 = (1,1,1)$. \n",
+    "- Step 1 The vector $u(0) = (9,7,4)$ is $2x_1 + 3x_2 + 4x_3$. Thus ($c_1, c_2, c_3) = (2,3,4)$. \n",
+    "- Step 2 The pure exponential solutions are $e^t x_1$ and $e^{2t} x_2$ and $e^{3t} x_3$. \n",
+    "- Step 3 The combination that starts from $u(0)$ is $u(t) = 2e^{t}x_1 + 3e^{2t} x_2 + 4e^{3t} x_3$. \n",
+    "\n",
+    "The coefficients 2, 3, 4 came from solving the linear equation $c_1x_1 + c_2x_2 + c_3x_3 = u(0)$: \n",
+    "\n",
+    "$$\\begin{bmatrix}{}&{}&{}\\\\{x_1}&{x_2}&{x_3}\\\\{}&{}&{} \\end{bmatrix}\\begin{bmatrix}{c_1}\\\\{c_2}\\\\{c_3} \\end{bmatrix}=\\begin{bmatrix}{1}&{1}&{1}\\\\{0}&{1}&{1}\\\\{0}&{0}{1} \\end{bmatrix}\\begin{bmatrix}{2}\\\\{3}\\\\{4} \\end{bmatrix}=\\begin{bmatrix}{9}\\\\{7}\\\\{4} \\end{bmatrix} \\text{ which is } Sc=u(0)$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ef0e27d-d007-4922-b361-f57e2b686ff1",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa68689d-bb94-44f9-b5f9-d880c2ff1852",
+   "metadata": {},
+   "source": [
+    "#### Second Order Equations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ab6e74e-e77e-4584-85ed-fbf2409b98d2",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bda72759-7548-4b84-90aa-bdaa2e54faf4",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebc737f3-e85c-4ffd-92ac-1d24b363ef0a",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "485a70a9-2aa4-42f3-a88e-f4624a24a031",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab01735b-9dc3-47df-b464-13e62e5851e2",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8cd9a55f-cee9-4091-b4f5-39924e63ff0c",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edf94cea-ab2b-406f-a03c-cd16fca8f820",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "743ff554-d737-4d4f-95fe-ebfd4da4061d",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eedb5810-2d7b-487d-8e16-881606a88b06",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5623c92-236f-4a64-a354-01546f81a8b0",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3e530ae-9a64-4832-ae46-ba2472591fa5",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88371708-6885-449b-b745-77393f08b2ca",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10473aa4-a05d-4554-bc6b-8b4f573aa6ff",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4088505b-f4b1-4e30-9e00-d8fcfab5f4ed",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce38fa66-6215-4c0f-b637-faf0ce07bb70",
    "metadata": {},
    "source": []
   },
