--- a/_notebooks/2022-01-08-eigen.ipynb
+++ b/_notebooks/2022-01-08-eigen.ipynb
@@ -1303,25 +1303,51 @@
    "cell_type": "markdown",
    "id": "2ab6e74e-e77e-4584-85ed-fbf2409b98d2",
    "metadata": {},
-   "source": []
+   "source": [
+    "The most important equation in mechanics is $my\" +by' +ky = 0$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "33bcef46-a0f4-44f6-8265-f7535371d182",
+   "metadata": {},
+   "source": [
+    "?"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "bda72759-7548-4b84-90aa-bdaa2e54faf4",
    "metadata": {},
-   "source": []
+   "source": [
+    "$$m\\frac{d^2 y}{dt^2}+b\\frac{dy}{dt} + ky = 0 \\text{ becomes } (m\\lambda^2 + b\\lambda + k) e^{\\lambda t}=0$$\n",
+    "\n",
+    "Everything depends on $m\\lambda^2 + b\\lambda + k = 0$. This equation for $\\lambda$ has two roots $\\lambda_1$ and $\\lambda_2$. Then the equation for $y$ has two pure solutions $y_1 = e^{\\lambda_1 t}$ and $y_2 = e^{\\lambda_2 t}$ . Their combinations $c_1 y_1 + c_2y_2$ give the complete solution unless $\\lambda_1 = \\lambda_2$."
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "ebc737f3-e85c-4ffd-92ac-1d24b363ef0a",
    "metadata": {},
-   "source": []
+   "source": [
+    "$$u(t)=c_1e^{\\lambda_1 t}\\begin{bmatrix}{1}\\\\{\\lambda_1} \\end{bmatrix}+c_we^{\\lambda_2 t}\\begin{bmatrix}{1}\\\\{\\lambda_2} \\end{bmatrix}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "200557ae-aa43-4a14-93f9-c6f478b22a05",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "485a70a9-2aa4-42f3-a88e-f4624a24a031",
    "metadata": {},
-   "source": []
+   "source": [
+    "##### ex3)"
+   ]
   },
   {
    "cell_type": "markdown",
