--- a/_notebooks/2022-01-09-eigen.ipynb
+++ b/_notebooks/2022-01-09-eigen.ipynb
@@ -1353,61 +1353,101 @@
    "cell_type": "markdown",
    "id": "ab01735b-9dc3-47df-b464-13e62e5851e2",
    "metadata": {},
-   "source": []
+   "source": [
+    "Motion around a circle with $y\" + y = 0$ and $y = cos t$"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "8cd9a55f-cee9-4091-b4f5-39924e63ff0c",
    "metadata": {},
-   "source": []
+   "source": [
+    "$$\\begin{matrix}{\\text{Forward from }n-1}\\\\{\\text{ Centeren at }n}\\\\{\\text{ Backward from }n+1} \\end{matrix}\\frac{Y_{n+1}-2Y_n +Y_{n-1}}{(\\Delta t)^2}=\\begin{matrix}{-Y_{n-1}}\\\\{-Y_n}\\\\{-Y_{n+1}} \\end{matrix}$$\n",
+    "- 이 세가지 방법은 완전한 원을 구성하진 않아, $\\Delta t = \\frac{2\\pi}{32}$ 길이의 32단계에서"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "edf94cea-ab2b-406f-a03c-cd16fca8f820",
    "metadata": {},
-   "source": []
+   "source": [
+    "$$\\text{Foward }|\\lambda|>1\\text{  (spiral out) Centered} |\\lambda|=1\\text{(best) Backward } |\\lambda|<1 \\text{ (spiral in)}$$"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "743ff554-d737-4d4f-95fe-ebfd4da4061d",
    "metadata": {},
-   "source": []
+   "source": [
+    "$$\\text{Forward }\\begin{matrix}{Y_{n+1}=Y_n+\\Delta tZ_n}\\\\{Z_{n+1}=Z_n-\\Delta tY_n}\\end{matrix}\\text{ becomes } U_{n+1}=\\begin{bmatrix}{1}&{\\Delta t}\\\\{-\\Delta t}&{1} \\end{bmatrix}\\begin{bmatrix}{Y_n}\\\\{A_n} \\end{bmatrix}=AU_n$$"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "eedb5810-2d7b-487d-8e16-881606a88b06",
    "metadata": {},
-   "source": []
+   "source": [
+    "$$\\text{Eigenvalues of A } \\lambda = 1 \\pm i\\Delta t \\text{  } |\\lambda | >1 \\text{ and } (Y_n, Z_n) \\text{ spirals out}$$"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "d5623c92-236f-4a64-a354-01546f81a8b0",
    "metadata": {},
-   "source": []
+   "source": [
+    "$$\\text{Backward }\\begin{matrix} {Y_{n+1}=Y_n+\\Delta t Z_{n+1}}\\\\{Z_{n+1}=Z_n-\\Delta t T_{n+1}}\\end{matrix} \\text{ is } \\begin{bmatrix}{1} &{-\\Delta t}\\\\{\\Delta}&{1}\\end{bmatrix}\\begin{bmatrix}{Y_{n+1}\\\\{Z_{n+1}}}\\end{bmatrix}=\\begin{bmatrix}{Y_n}\\\\{Z_n}\\end{bmatrix}=U_n$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a0240ca4-f534-4c34-bb5e-cb4b6dc5aef5",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "c3e530ae-9a64-4832-ae46-ba2472591fa5",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Stability of 2 by 2 Matrices"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "88371708-6885-449b-b745-77393f08b2ca",
    "metadata": {},
-   "source": []
+   "source": [
+    "- complete solution $u(t)$ 는 $e^{\\lambda t}$로 만들어짐!\n",
+    "- 만약 고유값 람다가 있다면, $e^{\\lambda t}$가 0에 가까워지면 그땐 정확하게 람다가 음수여야 한다는 것을 알지.\n",
+    "- 만약 고유값이 복소수 $\\lambda = r+is$라면 실제 부분 r은 음수여야 하지."
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "10473aa4-a05d-4554-bc6b-8b4f573aa6ff",
    "metadata": {},
-   "source": []
+   "source": [
+    "$$e^{ist} =\\cos st + i \\sin st \\text{ has }|e^{ist}|^2=\\cos ^2 st+\\sin ^2 st =1 $$"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "4088505b-f4b1-4e30-9e00-d8fcfab5f4ed",
    "metadata": {},
-   "source": []
+   "source": [
+    "**Which matrices have negative eigenvalues? More accurately, when are the real parts of the $\\lambda$'s all negative?**\n",
+    "\n",
+    "$$\\text{Stability; a is stable and } u(t)\\rightarrow 0 \\text{ when all eigenvalues have negative real parts.}$$\n",
+    "\n",
+    "$$\\text{The 2 by 2 matrix } A=\\begin{bmatrix}{a}&{b}\\\\{c}&{d}\\end{bmatrix} \\text{must pass two tests:}$$\n",
+    "\n",
+    "$$\\begin{matrix}{\\lambda_1+\\lambda_2<0}\\\\{\\lambda_1\\lambda_2 >0}\\end{matrix} \\begin{matrix}{\\text{The trace } T=a+d \\text{must be negative}}\\\\{\\text{The determinant } D=ad-bc \\text{ must be positive}}\\end{matrix}$$\n",
+    "\n",
+    "- 람다들이 음수로 존재하면 합은 음수일테니까, 그 합이 trace T이고. 그럼 곱은 양수가 되겠지. 이게 determinant D야.\n",
+    "- 람다들이 복소수라면 $r\\pm is$로부터 얻을 수 있겠지, dkslais T,D는 얻을 수 없어"
+   ]
   },
   {
    "cell_type": "markdown",
