--- a/_notebooks/2022-01-09-eigen.ipynb
+++ b/_notebooks/2022-01-09-eigen.ipynb
@@ -621,7 +621,7 @@
    "id": "294792b4-4f64-423a-8939-76db3ce0ed09",
    "metadata": {},
    "source": [
-    "Eigenvectors $\\begin{bmatrix}{1}\\\\{0}\\end{bmatrix}$$\\begin{bmatrix}{1}\\\\{1}\\end{bmatrix}$ $\\begin{matrix}\\begin{bmatrix}{1}&{-1}\\\\{0}&{1}\\end{bmatrix}\\\\S^{-1}\\end{matrix}$ $\\begin{matrix}\\begin{bmatrix}{1}&{5}\\\\{0}&{6}\\end{bmatrix}\\\\A\\end{matrix}$$\\begin{matrix}\\begin{bmatrix}{1}&{1}\\\\{0}&{1}\\end{bmatrix}\\\\S\\end{matrix}$ = $\\begin{matrix}\\begin{bmatrix}{1}&{0}\\\\{0}&{6}\\end{bmatrix}\\\\ \\Lambda\\end{matrix}$"
+    "$$\\text{Eigenvectors }\\begin{bmatrix}{1}\\\\{0}\\end{bmatrix}\\begin{bmatrix}{1}\\\\{1}\\end{bmatrix} \\begin{matrix}\\begin{bmatrix}{1}&{-1}\\\\{0}&{1}\\end{bmatrix}\\\\S^{-1}\\end{matrix}\\begin{matrix}\\begin{bmatrix}{1}&{5}\\\\{0}&{6}\\end{bmatrix}\\\\A\\end{matrix}\\begin{matrix}\\begin{bmatrix}{1}&{1}\\\\{0}&{1}\\end{bmatrix}\\\\S\\end{matrix}$ = $\\begin{matrix}\\begin{bmatrix}{1}&{0}\\\\{0}&{6}\\end{bmatrix}\\\\ \\Lambda\\end{matrix}$$"
    ]
   },
   {
@@ -1446,12 +1446,307 @@
     "$$\\begin{matrix}{\\lambda_1+\\lambda_2<0}\\\\{\\lambda_1\\lambda_2 >0}\\end{matrix} \\begin{matrix}{\\text{The trace } T=a+d \\text{must be negative}}\\\\{\\text{The determinant } D=ad-bc \\text{ must be positive}}\\end{matrix}$$\n",
     "\n",
     "- 람다들이 음수로 존재하면 합은 음수일테니까, 그 합이 trace T이고. 그럼 곱은 양수가 되겠지. 이게 determinant D야.\n",
-    "- 람다들이 복소수라면 $r\\pm is$로부터 얻을 수 있겠지, dkslais T,D는 얻을 수 없어"
+    "- 람다들이 복소수라면 $r\\pm is$로부터 얻을 수 있겠지, 그렇지 않으면 T,D는 얻을 수 없어"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40a5fa9f-b4a8-4beb-8df2-a4c612f562db",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b39bfc4-761d-4683-b863-231884adf9b6",
+   "metadata": {},
+   "source": [
+    "#### The Exponential of a Matrix "
    ]
   },
   {
    "cell_type": "markdown",
    "id": "ce38fa66-6215-4c0f-b637-faf0ce07bb70",
+   "metadata": {},
+   "source": [
+    "We want to write the solution $u(t)$ in a new form $e^{At} u(0)$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d023c34b-798d-49f5-949c-d2717abf1e81",
+   "metadata": {},
+   "source": [
+    "$$\\text{Matrix exponentil }e^{At} \\text{    } e^{At} = I At +\\frac{1}{2}(At)^2 + \\frac{1}{6}(At)^3+\\dots$$\n",
+    "\n",
+    "$$\\text{Its derivative is } Ae^{At} \\text{     }A+A^2+\\frac{1}{2}A^3t^2+\\dots = Ae^{At}$$\n",
+    "\n",
+    "$$\\text{Its eigenvalues are } e^{\\lambda r}\\text{   }(I+At +\\frac{1}{2}(At)^2)x=(1+\\lambda t +\\frac{1}{2}(\\lambda t)^2+\\dots)x$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c70e5537-ac25-45ee-98bc-c967e7b86a19",
+   "metadata": {},
+   "source": [
+    "This chapter emphasizes how to find$ u(t) = e^{At} u(0)$ by diagonalization. Assume A does have $n$ independent eigenvectors, so it is diagonalizable. Substitute $A = S\\Lambda S^{-1}$ into the series for $e^{At}$. Whenever $\\Lambda S^{-1} S\\Lambda S^{-1}$ appears, cancel $S^{-1} S$ in the middle:\n",
+    "\n",
+    "$$\\text{Use the series  } e^{At}=I+S\\Lambda S^{-1}t +\\frac{1}{2}(S\\Lambda S^{-1}t)(S\\Lambda S^{-1}t)+\\dots$$\n",
+    "\n",
+    "$$\\text{Factor out } S \\text{ and } S^{-1} \\text{   } = S[I+\\Lambda t +\\frac{1}{2}(\\Lambda t)^2+\\dots]S^{-1}$$\n",
+    "\n",
+    "$$\\text{Diagonalize } e^{At} \\text{  } = Se^{\\Lambda t}S^{-1}$$\n",
+    "\n",
+    "$$e^{At}u(0) = Se^{\\Lambda t}S^{-1}u(0)=\\begin{bmatrix}{}\\\\{x_1}&{\\dots}&{x_n}\\\\{}\\end{bmatrix}\\begin{bmatrix}{e^{\\lambda_1t}}&{}&{}\\\\{}&{\\ddots}&{}\\\\{}&{}&{e^{\\lambda)n t}}\\end{bmatrix}\\begin{bmatrix}{c_1}\\\\{\\vdots}\\\\{c_n}\\end{bmatrix}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88c1f95d-f504-4dd6-a479-a76e8f2f276a",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "$e^{At}u(0)$의 solution\n",
+    "\n",
+    "1. $u(0)=c_1x_1+\\dots+c_nx_n$을 쓰자, n개의 독립적인 고유벡터가 필요하다.\n",
+    "2. $e^{\\lambda_i t}$에 각 $x_i$를 곱하자\n",
+    "3. $e^{At}u(0)$의 best form은 $u(t)=c_1e^{\\lambda_1 t}x_1+\\dots+c_ne^{\\lambda_n t}x_n$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "37c1bddd-8648-4f3a-a235-03a97736fa20",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e76cda2-ca59-42d3-83cf-f03f42215bdb",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "##### ex4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "317eddbb-58c4-4b8a-a107-59fe1152adf1",
+   "metadata": {},
+   "source": [
+    "When you substitute $y = e^{\\lambda t}$ into $y\" - 2y' + y = 0$, you get an equation with repeated roots: $\\lambda^2 - 2\\lambda + 1 = 0 = (\\lambda-1)$.\n",
+    "\n",
+    "$$\\text{Short series  }e^{At}=e^{It}e^P-I{t=e^t[I+(A-I)t}$$\n",
+    "\n",
+    "$$u(t)=e^t\\begin{bmatrix}I+\\begin{bmatrix}{-1}&{1}\\\\{-1}&{1}\\end{bmatrix} t \\end{bmatrix}u(0)$$\n",
+    "\n",
+    "$$y(t) = e^ty(0) -te^ty(0) +te^t y[0]$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "123855ab-187f-477f-8847-651eb4781dbf",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7aba56a-38a0-4937-915e-241dd5db9935",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "##### ex5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c7fcfd4-886e-4a85-92ea-5da65386987a",
+   "metadata": {},
+   "source": [
+    "Use the infinite series to find $e^{At}$ for $A=\\begin{bmatrix}{0}&{1}\\\\{-1}&{1}\\end{bmatrix}$. Notice that $A^4=I$\n",
+    "\n",
+    "$$A=\\begin{bmatrix}{0}&{1}\\\\{-1}&{1}\\end{bmatrix}$$\n",
+    "\n",
+    "$$e^{At}=\\begin{bmatrix}{\\cos t}&{\\sin t}\\\\{\\sin t}&{\\cos t}\\end{bmatrix}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1f88163-1b12-4f74-aa13-68f74ebbb48a",
+   "metadata": {},
+   "source": [
+    "The eigenvalues of eAt are e it and e-it . Three rules: \n",
+    "1. $e^{At}$ always has the inverse $e^{-A}$t . \n",
+    "2. The eigenvalues of $e^{At}$ are always $e^{\\lambda t}$. \n",
+    "3. When A is skew-symmetric, $e^{At}$ is orthogonal. Inverse = transpose = $e^{-At}. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "827d6e55-0971-44b7-987c-8df594730ceb",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4f985b8-7bf1-482e-a81e-5ef16a040b09",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "##### ex6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f4ef915-2dde-4fb4-94dc-a229aa0e7de8",
+   "metadata": {},
+   "source": [
+    "Solve\n",
+    "\n",
+    "$\\frac{du}{dt}=Au=\\begin{bmatrix}{1}&{1}\\\\{0}&{2}\\end{bmatrix}u$ starting from $u(0)=\\begin{bmatrix}{2}\\\\{1}\\end{bmatrix}$ at t=0\n",
+    "\n",
+    "Solution\n",
+    "\n",
+    "$u(t)=e^t\\begin{bmatrix}{1}\\\\{0}\\end{bmatrix}+e^{2t}\\begin{bmatrix}{1}\\\\{1}\\end{bmatrix}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "507a7b7e-99e7-40b3-a2c0-13e8212f2d06",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9f48ac6-3b40-4d8d-ae8c-57640ce7e129",
+   "metadata": {},
+   "source": [
+    "**REVIEW OF THE KEY IDEAS**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6cc70e7e-c88f-473b-97c5-b1a17bf96076",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "43212dee-477a-4e50-9fd0-87fa5b57feda",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a4f398b-7e1b-4d4f-bb3b-bf811f940cf1",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e419ab2-8152-42e0-8296-9755603a59d0",
+   "metadata": {},
+   "source": [
+    "**WORKED EXAMPLES**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f95858d-9b24-48f8-a68e-a062367634b1",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a816192a-dd1c-469d-b5b2-c0293bd1422d",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d4fe394-1f9f-46fb-98fc-5edc29c14ec2",
+   "metadata": {},
+   "source": [
+    "**Problem Set 6.3**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51ba48fb-005d-41ba-896b-bf1e1e4b9782",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "671cad3c-0bd8-44d0-a2b7-5715c7b0c595",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "515839fd-f874-4102-830e-c5a876a746a2",
+   "metadata": {},
+   "source": [
+    "### 6.4 Symmetric Matrices "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d75009bc-f0e3-4209-9026-091942359355",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87739b13-6261-4ae2-9790-3b065cee5056",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57c61c87-6ab8-4361-a01c-58c58cab79bc",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3687db83-5c16-4d4b-9345-85deddefe318",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9cfeb166-27f7-4fbf-8465-2bbeb6202f8a",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbe7ea9f-01fc-4385-94c0-b20ec52ba86a",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a73d3bf6-8c4d-4ba0-b83a-61c315b4feaa",
    "metadata": {},
    "source": []
   },
