--- a/_notebooks/2022-01-09-eigen.ipynb
+++ b/_notebooks/2022-01-09-eigen.ipynb
@@ -1712,41 +1712,202 @@
    "cell_type": "markdown",
    "id": "d75009bc-f0e3-4209-9026-091942359355",
    "metadata": {},
-   "source": []
+   "source": [
+    "**I have to write \"can be chosen\" because the two in the plane are not automatically perpendicular.**\n",
+    "\n",
+    "**This section makes that best possible choice for symmetric matrices: The eigenvectors of $P = P^T$ are perpendicular unit vectors.**"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "87739b13-6261-4ae2-9790-3b065cee5056",
    "metadata": {},
-   "source": []
+   "source": [
+    "What is special about $A x = \\lambda x$ when A is symmetric?\n",
+    "- A와 trsnspose한 A가 같을 때 고유값 람다와 고유벡터 엑스의 특징을 볼거야"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "57c61c87-6ab8-4361-a01c-58c58cab79bc",
    "metadata": {},
-   "source": []
+   "source": [
+    "diagonalization $A=S\\Lambda S^{-1}$는 A의 대칭을 반영할걸, $A^T=(S^{-1})^T \\Lambda S^{T}$에서 힌트를 얻어볼까!\n",
+    "- A와 trsnpose A가 같다 했으니까.\n",
+    "- $S = S^{-1}$ 겠네?\n",
+    "     - That makes each eigenvector in S orthogonal to the other eigenvectors.\n",
+    "     - S의 각 고유 벡터를 다르 고유벡터와 직교하게 만듦!"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "3687db83-5c16-4d4b-9345-85deddefe318",
    "metadata": {},
-   "source": []
+   "source": [
+    "**key fact**\n",
+    "1. Asymmetric matrix has only real eigenvalues.\n",
+    "2. The eigenvectors can be chosen orthonormal."
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "9cfeb166-27f7-4fbf-8465-2bbeb6202f8a",
    "metadata": {},
-   "source": []
+   "source": [
+    "Its eigenvector matrix $S$ becomes an orthogonal matrix $Q$. Orthogonal matrices have $Q^{-l} = Q^T$"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "dbe7ea9f-01fc-4385-94c0-b20ec52ba86a",
    "metadata": {},
-   "source": []
+   "source": [
+    "> note: 직교한 고유벡터를 선택할 떄 S = Q 라 쓴다는 것을 기억하자"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "a73d3bf6-8c4d-4ba0-b83a-61c315b4feaa",
+   "metadata": {},
+   "source": [
+    "Why do we use the word \"choose\"? Because the eigenvectors do not have to be unit vectors.\n",
+    "\n",
+    "Their lengths are at our disposal. We will choose unit vectors-eigenvectors of length one, which are orthnormal and not just orthogonal.\n",
+    "\n",
+    "Then $S\\Lambda S^{-1}$ is in its special and particular form $Q\\Lambda Q^T$ for symmetric matrices:\n",
+    "\n",
+    "**(Special Theorem) 모든 대칭 행렬은 람다 행렬의 고유값들과 $S=Q$ 인 직교 고유벡터와 같이 factorization $A=Q\\Lambda Q^T$을 가지고 있음**\n",
+    "\n",
+    "$$\\text{Symmetric diagonalixation } A=Q\\Lambda Q^{-1}=Q\\Lambda Q^T \\text{ with } Q^{-1} = Q^T$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "20664c1c-a8f4-41a8-8b26-ab0ad496aae6",
+   "metadata": {},
+   "source": [
+    "This is the \"spectral theorem\" in mathematics and the \"principal axis theorem\" in geometry and physics. \n",
+    "1. By an example, showing real $\\Lambda$'s in A and orthonormal $x$'s in $Q$. \n",
+    "2. By a proof of those facts when no eigenvalues are repeated. \n",
+    "3. By a proof that allows repeated eigenvalues (at the end of this section). "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "deb9179d-6847-4dcb-8a49-b6c452f19b27",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "630136a6-de86-42c5-936b-d54ce3504feb",
+   "metadata": {},
+   "source": [
+    "##### ex1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97e7d45f-28df-453b-9dea-5eb3773325fb",
+   "metadata": {},
+   "source": [
+    "Find the $\\lambda$'s and $x$'s when $A=\\begin{bmatrix}{1}&{2}\\\\{2}&{4}\\end{bmatrix}$ and $A-\\lambda I = \\begin{bmatrix}{1-\\lambda}&{2}\\\\{2}&{4-\\lambda}\\end{bmatrix}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f8915be-e753-438c-97aa-dfd17bd32fec",
+   "metadata": {},
+   "source": [
+    "*Solution*\n",
+    "\n",
+    "- determinant of $A-\\lambda I$인 $\\lambda^2-5\\lambda$로 고유값 0,5를 찾을 수 있지\n",
+    "- 두 고유 벡터는 (2,-1),(1,2)야.(orthogonal but not yet orthonormal.)\n",
+    "- 람다가 0일때 고유벡터는 A의 nullspace안에 있어.\n",
+    "- 람다가 5일때 고유벡터는 열공간column space 안에 있어.\n",
+    "- why are the nullspace and column space perpendicular? \n",
+    "    - The Fundamental Theorem says that the nullspace is perpendicular to the row space-not the column space.\n",
+    "- 하지만 우리가 보는 행령은 대칭이잖아!\n",
+    "- 그래서 행과 열 공간은 같지."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "65c4e7c3-6478-49ec-a491-07fbe193175a",
+   "metadata": {},
+   "source": [
+    "These eigenvectors have length $\\sqrt{5}$. Divide them by $\\sqrt{5}$ to get unit vectors.\n",
+    "\n",
+    "Put those into the columns of $S$ (which is $Q$). Then $Q^{-1} AQ$ is $\\Lambda$ and $Q^{-1} = Q^T$:\n",
+    "\n",
+    "$$Q^{-1}AQ = \\frac{1}{\\sqrt{5}}\\begin{bmatrix}{2}&{-1}\\\\{1}&{2}\\end{bmatrix} \\begin{bmatrix} {1}&{2}\\\\{2}&{4} \\end{bmatrix} \\frac{1}{\\sqrt{5}} \\begin{bmatrix} {2}&{1}\\\\{-1}&{2} \\end{bmatrix}=\\begin{bmatrix}{0}&{0}\\\\{0}&{5}\\end{bmatrix}=\\Lambda$$\n",
+    "\n",
+    "Now comes the $n$ by $n$ case. The $\\lambda$'s are real when $A = A^T$ and $Ax = \\lambda x$ . "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be09432c-d2d0-4b69-b84e-93e2c2f1530a",
+   "metadata": {},
+   "source": [
+    "**Real Eigenvalues; All the eigen values of a real symmetric matrix are real**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31541f6f-49e1-4580-876e-324b5978e136",
+   "metadata": {},
+   "source": [
+    "**Orthogonal Eigenvectors; Eigenvectors of a real symmetic matrix (when they correspond to different $\\lambda|'s)are always perpendeicular.**\n",
+    "\n",
+    "$$(\\lambda_1x)^Ty = (Ax)^Ty=x^TA^Ty = x^TAy=x^T\\lambda_2y$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c63e3f80-652d-4191-9a05-e9216400642f",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bb113822-0646-4904-8f5a-62199ad81c53",
+   "metadata": {},
+   "source": [
+    "##### ex2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e01b0702-18c6-4b34-b757-71f4fb40a1e2",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c42e09f0-6eb6-4026-8f29-3bcb28584a7c",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d27deca8-0f49-4fbb-a369-ee3ac871f5f3",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5081bfa2-18b2-4aff-9cdf-3316972bddd8",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa7f8f6f-6eac-4b0f-a2fc-9e2a740d90ed",
    "metadata": {},
    "source": []
   },
