--- a/_notebooks/2022-01-09-eigen.ipynb
+++ b/_notebooks/2022-01-09-eigen.ipynb
@@ -1885,29 +1885,181 @@
    "cell_type": "markdown",
    "id": "e01b0702-18c6-4b34-b757-71f4fb40a1e2",
    "metadata": {},
-   "source": []
+   "source": [
+    "The eigenvectors of a 2 by 2 symmetric matrix have a special form:\n",
+    "\n",
+    "Not widely known $A=\\begin{bmatrix}{a}&{b}\\\\{b}&{c}\\end{bmatrix}$ has $x_1=\\begin{bmatrix}{b}\\\\{\\lambda_1-a}\\end{bmatrix}$ and $x_2=\\begin{bmatrix}{\\lambda_2-c}\\\\{b}\\end{bmatrix}$"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "c42e09f0-6eb6-4026-8f29-3bcb28584a7c",
    "metadata": {},
-   "source": []
+   "source": [
+    "$$x_{1}^{T}x_2=b(\\lambda_2-c)+(\\lambda_1-a)b=b(\\lambda_1+\\lambda_2-a-c)=0$$\n",
+    "- $\\lambda_1+\\lambda_2$가 trace a+c와 같기 떄문에 0이다~\n",
+    "- $x_{1}^{T}x_2=0$이 되겠지?\n",
+    "- $x_1=x_2=0$일때, a=c,b=0\n",
+    "    - 이 경우 A=I에서 고유값이 반복됨"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "d27deca8-0f49-4fbb-a369-ee3ac871f5f3",
    "metadata": {},
-   "source": []
+   "source": [
+    "**This example shows the main goal of this section-to diagonalize symmetric matrices A by orthogonal eigenvector matrices $S = Q$. Look again at the result:**\n",
+    "$$\\text{Symmetry } A=S\\Lambda S^{-1} \\text{ becomes } A=Q\\Lambda Q^T \\text{ with } Q^TQ=I$$\n",
+    "\n",
+    "이는 모든 2 by 2 행렬이 이렇게 생겼다는 것을 의미\n",
+    "$$A=Q\\Lambda Q^T = \\begin{bmatrix}{}\\\\{x_1}&{x_2}\\\\{}\\end{bmatrix} \\begin{bmatrix} {\\lambda_1}&{}\\\\{}&{\\lambda_2}\\end{bmatrix} \\begin{bmatrix}{}&{x^{T}_{1}}&{}\\\\{}&{x_{2}^{T}}&{} \\end{bmatrix}$$\n",
+    "\n",
+    "$$\\text{Sum of ranl-one matrics }A=\\lambda_1x_1x_{1}^{T}+\\lambda_2x_2x_{2}^{T}$$"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "5081bfa2-18b2-4aff-9cdf-3316972bddd8",
    "metadata": {},
-   "source": []
+   "source": [
+    "- $x_ix_{i}^{T}$를 n번 곱하면 projection matrices임.\n",
+    "-  Including the A's, the spectral theorem A = QAQT for symmetric matrices says that A is a combination of projection matrices:\n",
+    "$$A=\\lambda_1P_1+\\dots+\\lambda_nP_n \\text{  } \\lambda_i=\\text{ eigenvalue, } P_i=\\text{projection onto eigenspace}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42b5b941-0ef9-4b1b-9594-b2a25f405668",
+   "metadata": {},
+   "source": [
+    "-----------------------"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "fa7f8f6f-6eac-4b0f-a2fc-9e2a740d90ed",
+   "metadata": {},
+   "source": [
+    "#### Complex Eigenvalues of Real Matrices "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a217d277-6389-430a-8ca0-5b7b9fb8f18d",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcff78f7-fff2-4161-afb1-f60d71ad8888",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73d782ab-4838-4ab8-9831-a2aed7c61ff3",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66a98b5c-7eb6-418f-925c-4d8a8f31485d",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42a88c39-00e0-4363-b9c9-9e499f40b990",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f85b2510-6083-442c-a6d8-437806e12088",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4e53ffc-f37c-4847-a1cb-bf84c847c0ed",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59c25268-5080-4ed3-8311-1b37c4ebf820",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ad9ab06-b4eb-40ba-acfe-6e4594f3ae4d",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66a70918-ef08-4fcd-a693-8375ae268b0f",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9021972e-1d7e-48fd-92f7-3dfe42717014",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "454cf992-9d58-4668-9ba4-d3d7d489fa2b",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c2142e7f-3c1a-48cc-bb78-77e7e5cbdffd",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "613c1568-f864-4928-af9a-13affb33d270",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c0e4589-c8b4-4582-b3a4-1af0f85d430c",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8e24938-6722-4f3f-87aa-1a1303404c4d",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c87a3bab-e9df-4b62-bb40-e87ba026cb95",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9e19643-fc0e-456b-8cbc-2cd6765c41a6",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46213f64-652d-4ff1-a9ca-4034b083ca4a",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf62df6d-5c98-4f30-9bdb-eaa2f75cae4d",
    "metadata": {},
    "source": []
   },
